feat: Add backend deployment files, frontend proxy configurations for development and Vercel, and update gitignore rules.

--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -3,6 +3,10 @@
         {
             "source": "/api/v1/:path*",
             "destination": "https://japanese-backend-7jun.onrender.com/api/v1/:path*"
+        },
+        {
+            "source": "/(.*)",
+            "destination": "/"
         }
     ]
 }
