--- a/render.yaml
+++ b/render.yaml
@@ -2,7 +2,7 @@ services:
   # Backend service
   - type: web
     name: japanese-learning-backend
-    env: python
+    runtime: python
     buildCommand: pip install -r backend/requirements.txt
     startCommand: cd backend && gunicorn -w 4 -k uvicorn.workers.UvicornWorker main:app --bind 0.0.0.0:$PORT
     envVars:
@@ -16,8 +16,9 @@ services:
   # Frontend service
   - type: web
     name: japanese-learning-frontend
+    runtime: static
     buildCommand: cd frontend && npm install && npm run build
-    publishPath: frontend
+    staticPublishPath: ./frontend/dist
     routes:
       - type: rewrite
         source: /api/v1/*
@@ -28,4 +29,5 @@ services:
 
 databases:
   - name: japanese-learning-db
-    plan: free
+    databaseName: japanese_learning_db
+    user: japanese_learning_user
