feat: Implement full user authentication with login/registration, protected routes, and initial frontend pages.

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,9 @@
 .env
 .env.*
 !.env.example
+.env.production
+.env.development
+.env.test
 
 # Python
 __pycache__/
@@ -27,7 +30,7 @@ wheels/
 .installed.cfg
 *.egg
 db.sqlite3
-dev.db
+*.db
 
 # Node
 node_modules/
